2025-03-02  Niels Möller  <nisse@lysator.liu.se>

	* powerpc64/p8/gcm-aes-decrypt.asm: Avoid using lxvb16x
	instruction in powerpc64/p8 files. Reported by Sean McGovern.
	* powerpc64/p8/gcm-aes-encrypt.asm: Likewise.

2025-02-09  Niels Möller  <nisse@lysator.liu.se>

	* powerpc64/p8/gcm-aes-decrypt.asm: Use stxvd2x/lxvd2x rather than
	stxv/lxv for save and restore of vector registers, since the
	latter instructions are not available on Power8 (ISA v2.07).
	* powerpc64/p8/gcm-aes-encrypt.asm: Likewise.

2024-12-30  Niels Möller  <nisse@lysator.liu.se>

	* Released Nettle-3.10.1.

2024-12-28  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/testutils.c (mark_bytes_undefined)
	(mark_bytes_defined) [!HAVE_VALGRIND_MEMCHECK_H]: Add UNUSED
	attribute on dummy version of these functions.

2024-12-14  Niels Möller  <nisse@lysator.liu.se>

	* configure.ac: Bump package version, to 3.10.1.
	(LIBNETTLE_MINOR): Bump minor number, to 8.10.
	(LIBHOGWEED_MINOR): Bump minor number, to 6.10.

2024-12-13  Niels Möller  <nisse@lysator.liu.se>

	* aclocal.m4 (NETTLE_PROG_VALGRIND): Check if executable appears
	to include lsan, asan or msan symbols, and if so, don't attempt to
	run valgrind.

2024-10-16  Niels Möller  <nisse@lysator.liu.se>

	* run-tests: Cleanup, guided by shellcheck warnings. Use $()
	rather than `` and $(()) rather than expr.

2024-09-08  Niels Möller  <nisse@lysator.liu.se>

	From Brad Smith: Support elf_aux_info (OpenBSD and FreeBSD).
	* configure.ac: Check for elf_aux_info.
	* fat-arm64.c (get_arm64_features): Use elf_aux_info if available.
	* fat-ppc.c (get_ppc_features): Likewise.

2024-06-23  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/testutils.h (struct nettle_xof): New struct type.
	* testsuite/testutils.c (test_hash): Delete support for tests with
	arbitrary digest size, reverting part of 2019-12-25 change.
	(test_xof): New function, test both digest and output functions.
	* testsuite/shake128-test.c (test_main): Change from using